Correção de bugs e finalização das classes invetoryMovement